@@ -6,6 +6,7 @@ version <next>:
 - extrastereo filter
 - ocr filter
 - alimiter filter
+- stereowiden filter
 
 
 version 2.8:
